--- a/jsf2-login-filter/WebContent/WEB-INF/web.xml
+++ b/jsf2-login-filter/WebContent/WEB-INF/web.xml
@@ -21,4 +21,12 @@
     <welcome-file-list>
         <welcome-file>faces/login.xhtml</welcome-file>
     </welcome-file-list>
+    
+    <resource-ref>
+		<description>DB Connection</description>
+		<res-ref-name>jdbc/loginapp</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+    
 </web-app>
