--- a/jsf2-login-filter/pom.xml
+++ b/jsf2-login-filter/pom.xml
@@ -24,10 +24,59 @@
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
+      
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>sql-maven-plugin</artifactId>
+        <version>1.5</version>
+      
+        <dependencies>
+          <!-- specify the dependent jdbc driver here -->
+          <dependency>
+            	<groupId>mysql</groupId>
+            	<artifactId>mysql-connector-java</artifactId>
+            	<version>5.1.34</version>
+          </dependency>
+        </dependencies>
+      
+              <!-- common configuration shared by all executions -->
+        <configuration>
+          <driver>com.mysql.jdbc.Driver</driver>
+          <url>jdbc:mysql://localhost:3306/loginapp</url>
+          <username>root</username>
+          <password>root</password>
+          <!-- You can comment out username/password configurations and have maven to look them up in your settings.xml using ${settingsKey} -->
+          <settingsKey>sensibleKey</settingsKey>
+        </configuration>
+
+ 		<executions>
+        <execution>
+            <id>create-db</id>
+            <phase>process-test-resources</phase>
+            <goals>
+              <goal>execute</goal>
+            </goals>
+            <configuration>
+              <url>jdbc:mysql://localhost:3306/loginapp</url>
+              <autocommit>true</autocommit>
+	          <srcFiles>
+                <srcFile>src/sql/tables.sql</srcFile>
+              </srcFiles>
+            </configuration>
+          </execution>
+
+       </executions>
+      
+      </plugin>
     </plugins>
     <finalName>${project.artifactId}</finalName>
   </build>
   	<dependencies>
+  		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
 		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-api</artifactId>
