--- a/jsf2-login-filter/pom.xml
+++ b/jsf2-login-filter/pom.xml
@@ -50,7 +50,7 @@
         </configuration>
 
  		<executions>
-        <execution>
+ 		<execution>
             <id>create-db</id>
             <phase>process-test-resources</phase>
             <goals>
@@ -58,6 +58,18 @@
             </goals>
             <configuration>
               <url>jdbc:mysql://localhost:3306/loginapp</url>
+              <!-- no transaction -->
+              <autocommit>true</autocommit>
+              <sqlCommand>create database IF NOT EXISTS loginapp</sqlCommand>
+            </configuration>
+          </execution>
+        <execution>
+            <id>create-schema</id>
+            <phase>process-test-resources</phase>
+            <goals>
+              <goal>execute</goal>
+            </goals>
+            <configuration>
               <autocommit>true</autocommit>
 	          <srcFiles>
                 <srcFile>src/sql/tables.sql</srcFile>
